--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-warning active" aria-current="page" href="/">Home</a>
+                <a class="nav-link text-warning active" aria-current="page" href="/">Anasayfa</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -61,7 +61,7 @@
             <li class="nav-item dropdown mx-2">
                 <a class="nav-link dropdown-toggle text-warning" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Hatice</a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-                    <li><a class="dropdown-item" href="#">Profil</a></li>
+                    <li><a class="dropdown-item" href="{% url 'profile' %}">Profil</a></li>
                     <li><a class="dropdown-item" href="#">Siparişlerim</a></li>
                     <li><a class="dropdown-item" href="#">Şifreni Değiştir</a></li>
                     <li><a class="dropdown-item" href="#">Çıkış Yap</a></li>
@@ -74,10 +74,10 @@
                 <a href="#" class="nav-link text-white">Sepet</a>
             </li>
             <li class="nav-item mx-2">
-                <a href="#" class="nav-link text-white">Giriş Yap</a>
+                <a href="{% url 'login' %}" class="nav-link text-white">Giriş Yap</a>
             </li>
             <li class="nav-item mx-2">
-                <a href="#" class="nav-link text-white">Kayıt Ol</a>
+                <a href="{% url 'customerregistration' %}" class="nav-link text-white">Kayıt Ol</a>
             </li>
           </ul>
         </div>
